--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.2",
     "typescript": "^5.1.6"
   },
