--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "start": "node server.js"
@@ -10,8 +11,14 @@
   "main": "server.js",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-ws": "^3.0.1",
     "@types/node": "^20.4.2",
-    "typescript": "^5.1.6"
+    "@types/uuid": "^9.0.2",
+    "@types/websocket": "^1.0.5",
+    "@types/ws": "^8.5.5",
+    "express-ws": "^5.0.2",
+    "typescript": "^5.1.6",
+    "uuid": "^9.0.0"
   },
   "author": "",
   "license": "ISC",
